# 3DEngine

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  b.bat  compile_commands.json  imgui.ini
.mimocode/plans/: 1782666819392-shiny-star.md
include/glad/: glad.h
src/: glad.c  main.cpp
src/algorithm/: maze.cpp  maze.h
src/app/: app.cpp  app.h  window.cpp  window.h
src/assets/models/teapot/: teapotMaterial.mtl
src/assets/shaders/: color.fs  color.vs  cubemap.fs  cubemap.vs  debug.vs  obj.fs  obj.vs  procedural_sky.fs  shadow_depth.vs
src/camera/: camera.cpp  camera.h
src/components/: component.h
src/components/audio/: audio.cpp  audio.h  audio_decoders_impl.cpp
src/components/collision/: collision.cpp  collision.h
src/components/transform/: transform.cpp  transform.h
src/cubemap/: cubemap.cpp  cubemap.h
src/debug/: debug_draw.cpp  debug_draw.h
src/economy/: economy.cpp  economy.h
src/entity/: entity.h
src/events/: event_sys.cpp  event_sys.h
src/light/: light.h
src/output/: output.cpp  output.h
src/physics/: spatial_grid.h
src/player/: player.cpp  player.h
src/renderer/: frustum.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  shadow.cpp  shadow.h  transform.cpp  transform.h
src/shader/: shader.cpp  shader.h
src/texture/: texture.cpp  texture.h
src/ui/: menu_pause.cpp  menu_pause.h  tabs.cpp  tabs.h  ui.cpp  ui.h
src/ui/ui_comps/: health_bar.cpp  health_bar.h  sprite.h  ui_component.h
src/utils/: arena_allocator.h  arena_wrapper.c  arena_wrapper.h  crash_handler.cpp  crash_handler.h  input.cpp  input.h  utils.h
(+7 files in other folders)
